# rp2040-12V-motor-regulator

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
pcb/: motor_12V_controller.kicad_pcb  motor_12V_controller.kicad_pro  motor_12V_controller.kicad_sch
pcb/buck/: motor_12V_controller.kicad_pcb  motor_12V_controller.kicad_sch  ~motor_12V_controller.kicad_sch.lck
pcb/buck/production/: netlist.ipc
pcb/linear/: motor_12V_controller.kicad_pcb  motor_12V_controller.kicad_pro  motor_12V_controller.kicad_sch
pcb/linear/production/: netlist.ipc
pcb/linear/symbols/PEC11R-4215F-S0024/: XDCR_PEC11R-4215F-S0024.kicad_mod
pcb/linear/symbols/RP2040-ZERO/: MODULE_RP2040-ZERO.kicad_mod
src/: encoder_sm.pio  gpios.rs  handlers.rs  main.rs  motor.rs  pio.rs  pwm.rs  xosc.rs
